--- a/src/components/Events/AddEvents.css
+++ b/src/components/Events/AddEvents.css
@@ -1,97 +1,99 @@
 .form-comp {
-    display: flex;
-    flex-direction: column;
-    /* border: 1px solid black; */
-    padding: 20px;
-    width: 50%;
-    margin-right: auto;
-  }
-  
-  .form-group {
-    margin-bottom: 15px;
-    
-  }
-  .add-event-title{
-        font-size: 32px;
-        font-weight: bold;
-  }
-  label {
-    font-weight: bold;
-    margin-left: 3px;
-  }
-  
-  input[type="text"],
-  textarea {
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    padding: 8px;
-    width: calc(100% - 16px);
-  }
-  
-  input[type="text"]:focus,
-  textarea:focus {
-    border-color: rgb(0, 0, 0);
-    outline: none;
-  }
+  display: flex;
+  flex-direction: column;
+  /* border: 1px solid black; */
+  padding: 20px;
+  width: 50%;
+  margin-right: auto;
+}
 
-  .input-file{
-    display: flex;
-    align-items: center;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    justify-content: center;
-    padding: 8px;
-    width: 30%;
-    background-color: rgb(112, 255, 112);
-    cursor: pointer;
-  }
-  .file-input{
-    display: none;
-  }
-  .file-input-label{
-    cursor: pointer;
-  }
-  .preview-image{
-    border: 1px solid black;
-    border-radius: 10px;
-    max-width: 100%;
-    height: 100px; 
-    display: block; 
-  }
-  .upload-spinner {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    /* margin-top: 5px; */
-    align-self: center;
-  }
+.form-group {
+  margin-bottom: 15px;
+}
+.add-event-title {
+  font-size: 32px;
+  font-weight: bold;
+}
+label {
+  font-weight: bold;
+  margin-left: 3px;
+}
 
-  .image-added{
-    opacity: 0.8;
-    cursor: not-allowed;
-  }
-  
-  .spinner-icon {
-    animation: spin 1s linear infinite;
-  }
-  
-  @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
-  }
-  
+input[type="text"],
+input[type="datetime-local"],
+textarea {
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  padding: 8px;
+  width: calc(100% - 16px);
+}
 
- .add-event-button {
-    width:30%;
-    background-color: dodgerblue;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    cursor: pointer;
-    border-radius: 10px;
+input[type="text"]:focus,
+textarea:focus {
+  border-color: rgb(0, 0, 0);
+  outline: none;
+}
+
+.input-file {
+  display: flex;
+  align-items: center;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  justify-content: center;
+  padding: 8px;
+  width: 30%;
+  background-color: rgb(112, 255, 112);
+  cursor: pointer;
+}
+.file-input {
+  display: none;
+}
+.file-input-label {
+  cursor: pointer;
+}
+.preview-image {
+  border: 1px solid black;
+  border-radius: 10px;
+  max-width: 100%;
+  height: 100px;
+  display: block;
+}
+.upload-spinner {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* margin-top: 5px; */
+  align-self: center;
+}
+
+.image-added {
+  opacity: 0.8;
+  cursor: not-allowed;
+}
+
+.spinner-icon {
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
   }
-  
-  .add-event-button:hover {
-    background-color: #007bff;
+  100% {
+    transform: rotate(360deg);
   }
-  
+}
+
+.add-event-button {
+  width: 30%;
+  background-color: dodgerblue;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  border-radius: 10px;
+}
+
+.add-event-button:hover {
+  background-color: #007bff;
+}
