Updated club profile 2

--- a/src/components/ClubCouncil/ClubCouncil.css
+++ b/src/components/ClubCouncil/ClubCouncil.css
@@ -1,63 +1,60 @@
-.clubcouncil-container{
-    margin:12px;
+.clubcouncil-container {
+  margin: 12px;
 }
-.logo{
-    width:200px;
-    height:200px;
+.logo {
+  width: 200px;
+  height: 200px;
 }
-.logo-container{
-    text-align: center;
+.logo-container {
+  text-align: center;
 }
-.logo{
-    display:block;
-    margin: 0 auto;
+.logo {
+  display: block;
+  margin: 0 auto;
 }
-.heading{
-    font-size: 18px;
-    font-weight: bold;
-    margin-bottom: 10px;
+.heading {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 10px;
 }
-.description{
-
-    margin-bottom: 10px;
-    font-size: 16px;
-
+.description {
+  margin-bottom: 10px;
+  font-size: 16px;
 }
-.span{
-    font-weight: bold;
+.span {
+  font-weight: bold;
 }
-.executive-container{
-    display: flex;
-    flex-wrap:wrap;
-    text-align: center;
+.executive-container {
+  display: flex;
+  flex-wrap: wrap;
+  text-align: center;
 }
-.executive-card{
-    margin-right:60px;
-    border-radius:20px;
-    padding: 20px;
+.executive-card {
+  margin-right: 60px;
+  border-radius: 20px;
+  padding: 10px;
 }
-.executive-card:hover{
-    background-color:lightgrey;
-    cursor: pointer;
+.executive-card:hover {
+  background-color: lightgrey;
+  cursor: pointer;
 }
-.image{
-    width:160px;
-    height:150px;
-    border-radius:50%;
-    
+.image {
+  width: 160px;
+  height: 150px;
+  border-radius: 50%;
 }
-.name{
-    font-size: 18px;
-    font-weight: 500;
+.name {
+  font-size: 18px;
+  font-weight: 500;
 }
-.role{
-    font-size: 16px;
-    font-weight:light;
-    color:darkgray;
+.role {
+  font-size: 16px;
+  font-weight: light;
+  color: rgb(65, 63, 63);
+  font-weight: 600;
 }
-.year{
-    font-size: 16px;
-    font-weight:light;
-    color:darkgray;
-
+.year {
+  font-size: 16px;
+  font-weight: light;
+  color: darkgray;
 }
