--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,4 +1,18 @@
-.active {
-  background-color: blue;
-  color: blue;
+.nav-item {
+  text-decoration: none;
+}
+
+.nav-item .nav-item-content {
+  transition: background-color 0.3s;
+}
+
+.nav-item.active .nav-item-content {
+  font-weight: 900;
+  background: rgb(206, 227, 255);
+  border-radius: 0.5rem;
+  border: 1px solid rgb(137, 188, 255);
+}
+
+.nav-item.active .nav-item-text {
+  font-weight: 700;
 }
