--- a/src/components/auth/Register/Register.module.css
+++ b/src/components/auth/Register/Register.module.css
@@ -32,10 +32,14 @@
 	margin-top: 30px;
   }
   
+  .logo_title_container {
+	display: flex;
+	align-items: center;
+	margin-top: 50px;
+  }
+  
   .register_title {
 	font-size: 40px;
-	margin-top: 40px;
-	color: #000000;
   }
   
   .register_input {
